--- a/css/styles-origin.css
+++ b/css/styles-origin.css
@@ -141,7 +141,7 @@ ul, ol {
     color: #ffffff;
     margin-bottom: 48px;
 }
-.button {
+.hero-button {
     display: block;
     border-radius: 4px;
     min-width: 169px;
@@ -161,8 +161,8 @@ ul, ol {
     margin: 0 auto;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.button:hover,
-.button:focus {
+.hero-button:hover,
+.hero-button:focus {
     background-color: #404bbf;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
