--- a/css/styles.css
+++ b/css/styles.css
@@ -216,8 +216,6 @@ header{
 
 .social-links {
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
     flex-direction: row;
     gap: 40px;
 }
@@ -225,6 +223,7 @@ header{
     width: 40px;
     height: 40px;
 }
+
 .icon-link {
     align-items: center;
     justify-content: center;
@@ -761,6 +760,7 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
 .team-card {
     background-color: #f4f4fd;
     padding-top: 96px;
+    padding-bottom: 96px;
 }
 .card-info {
     text-align: center;
@@ -833,4 +833,308 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
     flex-wrap: nowrap;
     gap: 24px;
     }
+}
+/*-------------PORTFOLIO---------*/
+.portfolio-section{
+    margin-bottom: 96px;
+}
+.portfolio-card {
+    width: 100%;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.card-image {
+    position: relative;
+    overflow: hidden
+}
+.portfolio-tab {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 48px;
+    column-gap: 24px;
+}
+.card-image {
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-tab {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 48px;
+    column-gap: 24px;
+}
+.hover-text {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; 
+    background-color: #4d5ae5;
+    padding: 40px 32px 164px 32px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    transform: translateY(100%); 
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 40px 32px;
+}
+.portfolio-card:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-card:hover .hover-text {
+    transform: translateY(0);
+} 
+    img {
+    max-width: 100%;
+}
+.portfolio-header{
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
+    margin-bottom: 72px;
+    margin-top: 96px;
+    text-align: center;
+}
+.portfolio-service {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+    }
+.portfolio-item{
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+.card-content {
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
+    padding: 32px 16px;
+}
+@media screen and (min-width: 768px) {
+    .portfolio-tab{
+        row-gap: 48px;
+        column-gap: 24px;
+        flex-wrap: wrap;
+    }
+    .portfolio-card {
+        width: calc((100% - 24px) / 2); 
+    }
+}
+@media screen and (min-width: 1158px){
+    .portfolio-card {
+        width: calc((100% - 48px) / 3); 
+    }
+}
+
+/*--------------FOOTER-------------*/
+.footer{
+    background-color: #2e2f42;
+    padding: 96px 0;
+    margin: 0 auto;
+}
+.footer-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+ .footer-logo{
+    display: flex;
+    justify-content: center;
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4D5AE5;
+    margin-bottom: 16px;
+    align-items: baseline;
+    text-align: center;
+}
+.container-logo {
+    margin-bottom: 72px;
+    text-align: center;
+}
+.footer-span{
+    color: #f4f4fd;
+}
+
+.footer-p {
+    line-height: 1.5;
+    color: #f4f4fd;
+    letter-spacing: 0.02em;
+    max-width: 264px;
+    text-align: left;
+}
+.social-text{
+    font-family: "Roboto", sans-serif;
+   font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;    
+    margin-bottom: 16px;
+    text-align: center;
+}
+.social-footer{
+    margin-bottom: 72px;
+}
+.footer-icons-list{
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: row;
+    gap: 16px;
+    width: 208px;
+    height: 40px;
+}
+.footer-soc-icon {
+    fill: #f4f4fd; 
+}
+.footer-icon-link {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); ;
+}
+.footer-icon-link:hover,
+.footer-icon-link:focus {
+    background-color: #31d0aa;
+}
+.subscribe-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+}
+.subscribe-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+}
+.subscribe-input{
+    width: 288px;
+    height: 40px;
+    border: 1px solid #ffffff;
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    border-radius: 4px;
+    color: #ffffff;
+    border: 1px solid #fff;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    opacity: 0.3;
+}
+.subscribe-input::placeholder{
+    color: #ffffff;
+}
+.subscribe-p{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    margin-bottom: 16px;
+}
+.subscribe-btn{
+    width: 165px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: #4d5ae5;
+    border: none;
+    border-radius: 4px;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-btn-icon{
+    margin-left: 16px;
+}
+
+@media screen and (min-width: 768px) {
+   .footer-container{
+    flex-wrap: wrap;
+        justify-content: center;
+        align-items: flex-start;
+        flex-direction: row;
+        gap: 72px;
+   }
+    .container-logo {
+        margin-bottom: 0;
+        text-align: left;
+        max-width: 264px;
+    }
+
+    .footer-logo {
+        justify-content: flex-start;
+        text-align: left;
+    }
+
+    .footer-p {
+        text-align: left;
+    }
+
+    .social-text {
+        text-align: left;
+    }
+
+    .footer-icons-list {
+        justify-content: flex-start;
+    }
+
+    .subscribe-container {
+        margin-left: 0;
+        align-items: flex-start;
+        
+    }
+
+    .subscribe-form {
+        flex-direction: row;
+        align-items: start;
+        gap: 24px;
+    }
+
+}
+@media screen and (min-width: 1158px){
+    .footer-container{
+    align-items: baseline;
+}
+.subscribe-btn:hover,
+.subscribe-btn:focus{
+    background-color: #31d0aa;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 }
