--- a/css/styles.css
+++ b/css/styles.css
@@ -1131,8 +1131,22 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
 
 }
 @media screen and (min-width: 1158px){
-    .footer-container{
-    align-items: baseline;
+.footer{
+    padding: 100px 0;
+    margin: 0 auto;
+}
+.footer-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 0;
+    max-width: 1158px;
+}   
+.container-logo {
+    margin-right: 120px;
+}
+.social-footer{
+    margin-right: 60px;
 }
 .subscribe-btn:hover,
 .subscribe-btn:focus{
