--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,8 @@ header{
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
-    padding: 24px 0;
+    padding: 16px 0;
+    display: block;
 }
 .studio{
     font-weight: 700;
@@ -95,10 +96,7 @@ header{
     text-transform: uppercase;
     color: #2e2f42;
 }
-.header-logo{
-    padding: 16px 0;
-    display:block;
-}
+
 .burger-btn {
     padding: 0;
     border: none;
@@ -126,7 +124,7 @@ header{
 .mobile-menu.is-open{
     opacity: 1;
     visibility: visible;
-    pointer-events: none;
+    pointer-events: auto;
 }
 
 .mobile-menu-container {
@@ -186,6 +184,8 @@ header{
     justify-content: flex-start;
     flex-direction: column;
     gap: 24px;
+}
+.mobile-address{
     margin-bottom: 48px;
 }
 .mobile-email {
@@ -241,6 +241,11 @@ header{
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (min-width: 768px){
+
+.logo{
+    padding: 24px 0; 
+    margin-right: 120px;
+    }
     .burger-btn {
     display: none;
 }
@@ -256,10 +261,7 @@ header{
     display: flex;
     align-items: center;
 }
-.header-logo{
-    padding: 24px 0; 
-    margin-right: 120px;
-}
+
 .links-list{
     display: flex;
     gap: 40px;
@@ -334,7 +336,7 @@ header{
      justify-content: space-between;
      align-items: center;
 }
-   .header-logo{
+   .logo{
     margin-right: 76px;
 }
 
@@ -367,44 +369,8 @@ header{
     background-position: center;
     background-size: cover;
     margin: 0 auto;
-    padding: 112px 0;
-}
-@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
-	screen and (min-resolution: 192dpi) and (max-width: 767px),
-	screen and (min-resolution: 2dppx) and (max-width: 767px) {
-	.solutions{
-		background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-			url(../images/hero-bg-mobile2x.jpg);
-	}
-}
-.header-solutions{
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11111;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #fff;
-    margin-bottom: 72px;
-}
-.hero-button {
-    display: block;
-    border-radius: 4px;
-    min-width: 169px;
-    height: 56px;
-    border: none;
-    cursor: pointer;
-    color: #ffffff;
-    background-color: #4D5AE5;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    background: #4d5ae5;
-    padding: 16px 32px;
-    margin: 0 auto;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 52px;
+    max-width: 320px;
 }
 .modal-overlay {
     background-color: rgba(46, 47, 66, 0.4); 
@@ -430,7 +396,7 @@ header{
     min-height: 623px;
     width: 288px;
     border-radius: 4px;
-    padding: 24px;
+    padding: 16px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     background: #fcfcfc;
     position:absolute;
@@ -541,6 +507,8 @@ textarea::placeholder{
     align-items: center; 
 }
 .checkbox-label{
+    display: flex;
+    align-items: center;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.17;
@@ -549,6 +517,7 @@ textarea::placeholder{
 }
 .checkbox-span{
     display: inline-flex;
+    flex-shrink: 0;
     align-items: center;
     justify-content: center;
     width: 16px;
@@ -589,7 +558,49 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
     border:none;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+	screen and (min-resolution: 192dpi) and (max-width: 767px),
+	screen and (min-resolution: 2dppx) and (max-width: 767px) {
+	.solutions{
+		background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+			url(../images/hero-bg-mobile2x.jpg);
+	}
+}
+.header-solutions{
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11111;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #fff;
+    margin-bottom: 72px;
+    max-width: 216px;
+}
+.hero-button {
+    display: block;
+    border-radius: 4px;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    cursor: pointer;
+    color: #ffffff;
+    background-color: #4D5AE5;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background: #4d5ae5;
+    padding: 16px 32px;
+    margin: 0 auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 @media screen and (min-width: 768px){
+    .modal{
+        padding: 24px;
+    }
     .solutions{
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-bg-tablet1x.jpg);
     background-repeat: no-repeat;
@@ -597,6 +608,8 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
     background-size: cover;
     margin: 0 auto;
     height: 436px;
+    max-width: 768px;
+    padding: 112px 136px;
 }
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
 	screen and (min-resolution: 192dpi) and (min-width: 768px),
@@ -609,7 +622,7 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
 .header-solutions{
     max-width: 496px;
     margin: 0 auto;
-    font-weight: bold;
+    font-weight: 700;
     font-size: 56px;
     line-height: 1.07143;
     letter-spacing: 0.02em;
@@ -633,6 +646,7 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
     background-size: cover;
     margin: 0 auto;
     height: 436px;
+    max-width: 1440px;
 }
 @media screen and (min-device-pixel-ratio: 2) and (min-width:1158px),
 	screen and (min-resolution: 192dpi) and (min-width:1158px),
@@ -642,6 +656,9 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
 			url(../images/hero-bg-desktop2x.jpg);
 	}
 }
+.header-solutions{
+    margin-bottom: 48px;
+}
 .modal{
     min-height: 584px;
     width: 408px;
@@ -650,6 +667,7 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
 /*------------PRINCIPLES-----------*/
 .principles-section{
     padding-bottom: 96px;
+    padding-top: 96px;
 }
 .feature{
     display: none;
@@ -670,7 +688,6 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    margin-top: 96px;
     color: #434455;
 }
 .feature-text{
@@ -686,8 +703,7 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
     flex-wrap: wrap; 
     justify-content: space-between; 
     gap: 24px 40px; 
-    padding: 0;
-    margin: 96px 16px;
+    row-gap: 72px;
 }
 .princ-li{
     width: calc(50% - 20px); 
@@ -719,7 +735,7 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    margin: 120px auto;
+    padding: 120px 0;
 }
 .princ-li{
     width: calc((100% - 72px)/4);
@@ -779,9 +795,7 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
 }
 .social-links {
     display:flex;
-    justify-content: space-evenly;
-    justify-content: center;
-    gap: 24px;
+    gap: 40px;
 }
 .social-li {
     width: 40px;
@@ -828,6 +842,9 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
     }
 }
 @media screen and (min-width: 1158px){
+  .team-card{
+    padding: 120px 0;
+  }  
     .team-list{
     display: flex;
     flex-wrap: nowrap;
@@ -836,7 +853,7 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
 }
 /*-------------PORTFOLIO---------*/
 .portfolio-section{
-    margin-bottom: 120px;
+    padding: 120px 0;
 }
 .portfolio-card {
     width: 100%;
@@ -849,7 +866,7 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
 .portfolio-tab {
     display: flex;
     flex-wrap: wrap;
-    row-gap: 48px;
+    row-gap: 72px;
     column-gap: 24px;
 }
 .card-image {
@@ -901,7 +918,6 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
     text-transform: capitalize;
     color: #2e2f42;
     margin-bottom: 72px;
-    margin-top: 96px;
     text-align: center;
 }
 .portfolio-service {
@@ -926,7 +942,7 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
 }
 @media screen and (min-width: 768px) {
     .portfolio-tab{
-        row-gap: 48px;
+        row-gap: 72px;
         column-gap: 24px;
         flex-wrap: wrap;
     }
@@ -935,6 +951,9 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
     }
 }
 @media screen and (min-width: 1158px){
+    .portfolio-tab {
+        row-gap: 31px;
+    }
     .portfolio-card {
         width: calc((100% - 48px) / 3); 
     }
@@ -1088,7 +1107,7 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
     flex-wrap: wrap;
     align-items: flex-start;
     flex-direction: row;
-    row-gap: 24px;
+    row-gap: 74px;
     column-gap: 24px;
     padding-left: 108px;
    }
@@ -1110,7 +1129,9 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
     .social-text {
         text-align: left;
     }
-
+    .social-footer{
+        margin-bottom: 0;
+    }
     .footer-icons-list {
         justify-content: flex-start;
     }
@@ -1135,11 +1156,13 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
     padding: 100px 0;
     margin: 0 auto;
 }
+
 .footer-container{
+    column-gap:0;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    padding: 0;
+    padding: 0 15px;
     max-width: 1158px;
 }   
 .container-logo {
@@ -1147,6 +1170,7 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
 }
 .social-footer{
     margin-right: 60px;
+    margin-bottom: 0;
 }
 .subscribe-btn:hover,
 .subscribe-btn:focus{
