--- a/css/styles.css
+++ b/css/styles.css
@@ -396,7 +396,6 @@ header{
     min-height: 623px;
     width: 288px;
     border-radius: 4px;
-    padding: 16px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     background: #fcfcfc;
     position:absolute;
@@ -404,7 +403,7 @@ header{
     left: 50%;
     transform: translate(-50%,  -50%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    padding: 72px 24px 24px 24px;
+    padding: 72px 16px 16px 16px;
 }
 .form-header{
     font-weight: 500;
@@ -599,7 +598,7 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
 
 @media screen and (min-width: 768px){
     .modal{
-        padding: 24px;
+        padding: 72px 24px 24px 24px;
     }
     .solutions{
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-bg-tablet1x.jpg);
@@ -607,9 +606,8 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
     background-position: center;
     background-size: cover;
     margin: 0 auto;
-    height: 436px;
     max-width: 768px;
-    padding: 112px 136px;
+    padding: 112px 0;
 }
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
 	screen and (min-resolution: 192dpi) and (min-width: 768px),
@@ -630,9 +628,7 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
     color: #fff;
     margin-bottom: 36px;
 }
-.hero-button{
-    margin-bottom: 112px;
-}
+
 .modal {
     width: 408px;
     height: 584px;
@@ -645,8 +641,11 @@ input[type="checkbox"]:checked + .checkbox-label .checkbox-span {
     background-position: center;
     background-size: cover;
     margin: 0 auto;
-    height: 436px;
     max-width: 1440px;
+    padding: 118px 0;
+}
+.hero-button{
+    margin-bottom: 0;
 }
 @media screen and (min-device-pixel-ratio: 2) and (min-width:1158px),
 	screen and (min-resolution: 192dpi) and (min-width:1158px),
